added extra pages

--- a/css/style.css
+++ b/css/style.css
@@ -1385,4 +1385,11 @@ blockquote {
 .copyright-wrap .footer_links li{border-bottom: 1px solid #d0d0d0;}
 .copyright-wrap .footer_links li:first-child{border-top: none}
 .copyright-wrap .footer_links li:last-child{border-bottom: none}
+
+/*************************************
+        Test css
+*************************************/
+
+
+
 }
